Bug 371852 - kcolorchooser crash QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data()
Summary: kcolorchooser crash QScopedPointer<QObjectData, QScopedPointerDeleter<QObject...
Status: RESOLVED FIXED
Alias: None
Product: kde
Classification: I don't know
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-30 08:09 UTC by RJ
Modified: 2016-11-02 03:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (33.56 KB, text/plain)
2016-10-30 08:09 UTC, RJ
Details

Note You need to log in before you can comment on or make changes to this bug.
Description RJ 2016-10-30 08:09:46 UTC
Created attachment 101895 [details]
backtrace

Don't know what happend just using it.
Comment 1 Christoph Feck 2016-11-02 03:46:37 UTC
Git commit a4c2986d2c8dbcac43cc7a8b49a3b03203372376 by Christoph Feck.
Committed on 02/11/2016 at 03:45.
Pushed by cfeck into branch 'master'.

Fix crash if mimeData is null

M  +5    -3    kcolorchooser.cpp

http://commits.kde.org/kcolorchooser/a4c2986d2c8dbcac43cc7a8b49a3b03203372376