Fix crash if mimeData is null

BUG: 371852